contour/ingressroute/team-b.yml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: kuard
  namespace: team-b
spec:
  routes:
    - match: /teamb
      services:
        - name: kuard
          port: 8080
